# mpy_tool

./: README.md
desktop_software/: .gitignore  README.md  TODO.md  build.bat  build.sh  build_github_releases_zip.sh  check_code.sh  copy_examples.py  create_poetry_env.bat  create_poetry_env.sh  install.py  pyproject.toml
desktop_software/assets/: notes.txt
desktop_software/assets/picow_flash_images/pico1w/: firmware.uf2
desktop_software/assets/picow_flash_images/pico2w/: README.txt  firmware.uf2
desktop_software/linux/: README.md
desktop_software/src/lib/: bluetooth.py  general.py  mcu_loader.py
desktop_software/src/mpy_tool/: mpy_tool.py  mpy_tool_gui.py
desktop_software/src/mpy_tool/_lib/: bluetooth.py  mcu_loader.py
desktop_software/src/mpy_tool/assets/: pyproject.toml
desktop_software/src/mpy_tool/assets/esp32_flash_images/esp32/: program_esp32.sh
desktop_software/src/mpy_tool/assets/examples/: WIFI_SETUP_GPIOS.md  notes.txt  project_template_1_README.md  project_template_2_README.md  project_template_4_README.md  project_template_5_README.md
desktop_software/src/mpy_tool/assets/examples/project_template_2/app1/: app.py
desktop_software/src/mpy_tool/assets/examples/project_template_4/app1/: app.py
desktop_software/src/mpy_tool/assets/examples/project_template_7/: main.py
desktop_software/src/mpy_tool/assets/examples/project_template_7/lib/: base_machine.py
desktop_software/src/mpy_tool/assets/picow_flash_images/pico1w/: firmware.uf2
desktop_software/src/mpy_tool/assets/picow_flash_images/pico2w/: firmware.uf2
testing/: testing.ods
(+69 files in other folders)
